--- a/CanBus.qsf
+++ b/CanBus.qsf
@@ -44,8 +44,6 @@ set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:39:48  MAY 23, 2017"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name VERILOG_FILE can_tx.v
-set_global_assignment -name VERILOG_FILE can_rx.v
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
@@ -54,10 +52,14 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH can_tb -section
 set_global_assignment -name EDA_TEST_BENCH_NAME can_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id can_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME can_tb -section_id can_tb
-set_global_assignment -name VERILOG_TEST_BENCH_FILE can_tb.v
 set_global_assignment -name EDA_TEST_BENCH_FILE can_tb.v -section_id can_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VERILOG_FILE can_destuff.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE can_stuff_error.v
+set_global_assignment -name VERILOG_FILE can_form_error.v
+set_global_assignment -name VERILOG_FILE can_tx.v
+set_global_assignment -name VERILOG_FILE can_rx.v
+set_global_assignment -name VERILOG_TEST_BENCH_FILE can_tb.v
+set_global_assignment -name VERILOG_FILE can_destuff.v
